plugins {
    id 'java'
    id 'checkstyle'
    id 'pmd'
    id 'jacoco'
    id 'maven-publish'
}

group 'no.unit.bibs'
version '1.0-SNAPSHOT'

java {
    sourceCompatibility = JavaVersion.VERSION_21 // source-code version and must be <= targetCompatibility
    targetCompatibility = JavaVersion.VERSION_21 // bytecode target version
}

repositories {
    mavenCentral()
    maven { url "https://jitpack.io" }
}

wrapper {
    distributionType = Wrapper.DistributionType.ALL
    gradleVersion = "8.14.2"
}


dependencies {
    compileOnly group: 'javax.ws.rs', name: 'javax.ws.rs-api', version: '2.1.1'

    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.17'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.19.0'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.19.0'
    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.19.0'
    implementation group: 'software.amazon.awssdk', name: 'dynamodb', version: '2.32.24'
    implementation group: 'software.amazon.awssdk', name: 's3', version: '2.32.24'
    implementation group: 'org.apache.commons', name: 'commons-text', version: '1.10.0'


    implementation group: 'com.github.bibsysdev', name: 'json', version: '2.2.6'
    implementation group: 'com.github.bibsysdev', name: 'core', version: '2.2.6'
    implementation group: 'com.github.bibsysdev', name: 'apigateway', version: '2.2.6'

    testImplementation group: 'com.github.bibsysdev', name: 'nvatestutils', version: '2.2.6'
    testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.5.1'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.12.2'
    testImplementation group: 'org.mockito' , name: 'mockito-inline', version: '5.2.0'

}

test {

    useJUnitPlatform()
    failFast = true
    finalizedBy jacocoTestReport
    testLogging {
        events "PASSED", "SKIPPED", "FAILED"
        showStandardStreams = true
    }
    environment("FOO", "bar")
    environment("COGNITO_AUTHORIZER_URLS", "https://test/jwks.json,https://test2/jwks.json")
}

jar.enabled = false


pmd {
    toolVersion = '7.14.0'
    ruleSetConfig = rootProject.resources.text.fromFile('config/pmd/ruleset.xml')
    ruleSets = []
    ignoreFailures = false

}

checkstyle {
    toolVersion = '10.17.0'
    configFile = rootProject.resources.text.fromFile('config/checkstyle/checkstyle.xml').asFile()
    showViolations = true
}

tasks.withType(Checkstyle).configureEach {
    reports {
        xml.required = false
        html.required = true
        html.stylesheet rootProject.resources.text.fromFile('config/checkstyle/checkstyle-simple.xsl')
    }
}



jacocoTestReport {
    reports {
        xml.required = false
        csv.required = false
        html.destination file("build/reports/jacoco")
    }
}

jacoco {
    toolVersion = "0.8.13"
}

check.dependsOn jacocoTestCoverageVerification
jacocoTestCoverageVerification.dependsOn(jacocoTestReport)

jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit {
                counter = 'METHOD'
                value = 'COVEREDRATIO'
                minimum = 0.90
            }
        }

        rule {
            limit {
                counter = 'CLASS'
                value = 'COVEREDRATIO'
                minimum = 1.0
            }
        }
    }
}

